fix(header): Aligned the menu items on center

--- a/Frontend/components/_header.sass
+++ b/Frontend/components/_header.sass
@@ -24,6 +24,9 @@
     list-style: none
     padding: 10px
 
+    @media (max-width: $mobile)
+      justify-content: center
+
     &-item:not(:last-child)
       margin-right: 30px
       
